@@ -14,6 +14,7 @@ PHP                                                                        NEWS
   . Fix empty argument cases for DOMParentNode methods. (nielsdos)
   . Fixed bug GH-11791 (Wrong default value of DOMDocument::xmlStandalone).
     (nielsdos)
+  . Fix json_encode result on DOMDocument. (nielsdos)
 
 - FFI:
   . Fix leaking definitions when using FFI::cdef()->new(...). (ilutov)
